RESOLVED FIXED259702
[CSS Math Functions] round() is incorrect when number is a multiple of step
https://bugs.webkit.org/show_bug.cgi?id=259702
Summary [CSS Math Functions] round() is incorrect when number is a multiple of step
Natalie Weizenbaum
Reported 2023-08-01 13:21:30 PDT
According to CSS Values and Units 4 (https://drafts.csswg.org/css-values-4/#round-func), for any round() strategy, > If A is exactly equal to an integer multiple of B, round() resolves to A exactly However, round(up, 10px, 5px) resolves to 15px instead of 10px as it should. Tested in Safari 16.6.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-01 16:10:04 PDT
Tim Nguyen (:ntim)
Comment 2 2023-08-01 18:49:24 PDT
Tim Nguyen (:ntim)
Comment 3 2023-08-01 18:57:22 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/41284
EWS
Comment 4 2023-08-01 21:05:05 PDT
Committed 266504@main (58d1ff825f4e): <https://commits.webkit.org/266504@main> Reviewed commits have been landed. Closing PR #16302 and removing active labels.
Tim Nguyen (:ntim)
Comment 5 2023-10-14 07:57:36 PDT
*** Bug 263145 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.