[CSS Math Functions] round() is incorrect when number is a multiple of step https://bugs.webkit.org/show_bug.cgi?id=259702 rdar://113233588

Reviewed by Simon Fraser.

In Safari 16.6, round(up, 10px, 5px) resolves to 15px instead of 10px as it should.

From https://drafts.csswg.org/css-values-4/#round-func:
> If A is exactly equal to an integer multiple of B, round() resolves to A exactly

Also add WPT for https://drafts.csswg.org/css-values/#round-infinities

* LayoutTests/imported/w3c/web-platform-tests/css/css-values/round-mod-rem-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/round-mod-rem-computed.html:
* Source/WebCore/platform/calc/CalcOperator.h:
(WebCore::evaluateCalcExpression):

Canonical link: https://commits.webkit.org/266504@main